--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="form-group">
                 <label for="phone">Телефон:</label>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{10}">
+                <input type="tel" id="phone" name="phone">
             </div>
             <div class="form-group">
                 <label for="email">E-mail:</label>
